# aijsondb

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
aijsondb/: aijsondbindex.cpp  aijsondbindex.h  aijsondblib.cpp  aijsondblib.h
aijsondbc/: aijsondbc.cpp
aijsondbcli/: main.cpp
python/: query.txt  test.py
tests/: test.cpp
